--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mywebsite.com/relativepath",
+  "homepage": "http://Niks7392.com/textUtils",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
